minikube/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: bcdb.info
      http:
        paths:
          - path: /dashboard(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: dashboard-service
                port:
                  number: 8080
          - path: /ingestor(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ingestor-service
                port:
                  number: 8080
          - path: /prometheus(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: prometheus-server-np
                port:
                  number: 9090
          - path: /grafana(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: grafana-np
                port:
                  number: 3000
          - path: /edge(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: edge-service
                port:
                  number: 8080
